# daily-mcp-server

./: .gitignore  .uvignore  AGENT_MCP_ARCHITECTURE_RFC.md  IMPLEMENTATION_STRATEGY.md  README.md  env.example  pyproject.toml  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  run.py
docker/: Dockerfile  docker-compose.yml
mcp_server/: __init__.py  app.py  config.py  server.py
mcp_server/schemas/: __init__.py  calendar.py  financial.py  mobility.py  todo.py  weather.py
mcp_server/tools/: __init__.py  calendar.py  financial.py  mobility.py  todo.py  weather.py
mcp_server/utils/: http_client.py  logging.py
tests/: __init__.py  conftest.py  test_app.py
tests/test_tools/: __init__.py  test_weather.py
